<resources>
    <string name="app_name">O!Palette</string>
    <string name="title_activity_gradient">GradientActivity</string>
    <string name="title_activity_proto">ProtoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_start_up_activity">StartUpActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="main_top_bar_button">next</string>
    <string name="dialog_exit_tittle">Are you sure?</string>
    <string name="dialog_exit_msg">If You leave, you will lose all progress.</string>
    <string name="dialog_exit_accept">Sure, I am leaving</string>
    <string name="dialog_exit_decline">Stay</string>
    <string name="control_top_bar_button_reset">Reset</string>
    <string name="control_brightness">Brightness</string>
    <string name="control_contrast">Contrast</string>
    <string name="control_move">Move</string>
    <string name="control_move_bar">Move bar</string>
    <string name="control_cells">Palette Cells</string>
    <string name="control_translate">Move &amp; Scale</string>
    <string name="control_add">Add</string>
    <string name="control_minimum">Minimum</string>
    <string name="control_maximum">Maximum</string>
    <string name="control_sharpness">Sharp</string>
    <string name="control_rotation">Rotate</string>
    <string name="control_zoom">Scale</string>
    <string name="control_canvas_size">Canvas</string>
    <string name="control_palette_region">Region</string>
    <string name="control_background">Background</string>
    <string name="control_borders">Borders</string>
    <string name="control_black_white">B &amp; W</string>
    <string name="control_threshold">Threshold</string>
    <string name="control_palette_type">Palette type</string>
    <string name="control_vignette">Vignette</string>
    <string name="control_gamma_correction">Gamma correction</string>
    <string name="control_noise">Noise</string>
    <string name="control_color">Color</string>
    <string name="pick_image_dialog">Select image source</string>
    <string name="camera">Camera</string>
    <string name="disable">Disable</string>
    <string name="palette_region_multi_touch_info">Use multi-touch to select a palette region.</string>
    <string name="palette_pick_warn">You have to select palette type first</string>
    <string name="line">Line</string>
    <string name="none">None</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="palette_type">Palette type</string>
    <string name="noise_level">Noise level</string>
    <string name="about">About</string>
    <string name="rate">Rate m8</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="vignette_mode_pick">Select vignette mode</string>
    <string name="full_screen">Full screen</string>
    <string name="only_image">Only image</string>
</resources>