<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   /*
  ~    * Copyright (C) Henryk Timur Domagalski
  ~    *
  ~    * Licensed under the Apache License, Version 2.0 (the "License");
  ~    * you may not use this file except in compliance with the License.
  ~    * You may obtain a copy of the License at
  ~    *
  ~    *      http://www.apache.org/licenses/LICENSE-2.0
  ~    *
  ~    * Unless required by applicable law or agreed to in writing, software
  ~    * distributed under the License is distributed on an "AS IS" BASIS,
  ~    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    * See the License for the specific language governing permissions and
  ~    * limitations under the License.
  ~    */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/palette_text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:text="@string/palette_region_multi_touch_info"
        android:textColor="@color/black_overlay"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <Button
                android:id="@+id/bwButtonOn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@drawable/ic_tonality_black_24dp"/>

            <TextView
                android:id="@+id/paletteTextRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/bwButtonOn"
                android:layout_alignStart="@+id/bwButtonOn"
                android:layout_below="@+id/bwButtonOn"
                android:layout_gravity="center"
                android:text="@string/line"
                android:textAlignment="center"
                android:textColor="@color/black_overlay"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <Button
                android:id="@+id/bwButtonOff"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@drawable/ic_block_black_24dp"/>

            <TextView
                android:id="@+id/paletteTextNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/bwButtonOff"
                android:layout_alignStart="@+id/bwButtonOff"
                android:layout_below="@+id/bwButtonOff"
                android:layout_gravity="center"
                android:text="@string/none"
                android:textAlignment="center"
                android:textColor="@color/black_overlay"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
