<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   /*
  ~    * Copyright (C) Henryk Timur Domagalski
  ~    *
  ~    * Licensed under the Apache License, Version 2.0 (the "License");
  ~    * you may not use this file except in compliance with the License.
  ~    * You may obtain a copy of the License at
  ~    *
  ~    *      http://www.apache.org/licenses/LICENSE-2.0
  ~    *
  ~    * Unless required by applicable law or agreed to in writing, software
  ~    * distributed under the License is distributed on an "AS IS" BASIS,
  ~    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    * See the License for the specific language governing permissions and
  ~    * limitations under the License.
  ~    */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/paletteTextInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/palette_type"
        android:textColor="@color/black_overlay"
        android:textSize="12sp"
        android:visibility="visible"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/paletteTextHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/paletteButtonHorizontal"
                    android:layout_centerHorizontal="true"
                    android:text="@string/horizontal"
                    android:textColor="@color/black_overlay"/>

                <Button
                    android:id="@+id/paletteButtonHorizontal"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_straighten_black_24dp"
                    android:gravity="center"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:visibility="visible">

                <TextView
                    android:id="@+id/paletteTextVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/paletteButtonVertical"
                    android:layout_centerHorizontal="true"
                    android:text="@string/vertical"
                    android:textColor="@color/black_overlay"/>

                <Button
                    android:id="@+id/paletteButtonVertical"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_straighten_black_2_24dp"
                    android:gravity="center"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/paletteTextGradHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/paletteButtonGradHorizontal"
                    android:layout_centerHorizontal="true"
                    android:text="Gradient \n horizontal"
                    android:textColor="@color/black_overlay"/>

                <Button
                    android:id="@+id/paletteButtonGradHorizontal"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:background="@drawable/ic_straighten_black_3_24dp"
                    android:gravity="center"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/paletteTextGradVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/paletteButtonGradVertical"
                    android:layout_centerHorizontal="true"
                    android:text="Gradient \n vertical"
                    android:textColor="@color/black_overlay"/>

                <Button
                    android:id="@+id/paletteButtonGradVertical"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:background="@drawable/ic_straighten_black_4_24dp"
                    android:gravity="center"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/paletteTextNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/paletteButtonNone"
                    android:layout_centerHorizontal="true"
                    android:text="@string/none"
                    android:textColor="@color/black_overlay"/>

                <Button
                    android:id="@+id/paletteButtonNone"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:background="@drawable/ic_block_black_24dp"
                    android:gravity="center"/>
            </RelativeLayout>


        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
